Fixed header z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -100,4 +100,5 @@
     width: 100%;
     background-color: var(--light-navy);
     padding-left: 5%;
+    z-index: 999999;
 }
