--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -17,6 +17,7 @@
     display: flex;
     gap: 20px;
     align-items: stretch;
+    padding: 0 10px;
 }
 
 @media (min-width: 768px) {
